<resources>
    <string name="app_name">mail.tm</string>
    <string name="email_label">Email *</string>
    <string name="my_email_randred_com">my_email@randred.com</string>
    <string name="password_label">Password *</string>
    <string name="password_hint">****</string>
    <string name="confirm_your_password_label">Confirm your password *</string>
    <string name="register_button">Register</string>
    <string name="mail_tm">Mail.tm</string>
    <string name="username_label">Username *</string>
    <string name="my_username">My_username</string>
    <string name="login">Login</string>
    <string name="i_haven_t_account_yet_register_now">I haven\'t an account yet. Register now!</string>
</resources>